remove extra <p> tag from handlebars

--- a/assets/scripts/templates/blog-listing.handlebars
+++ b/assets/scripts/templates/blog-listing.handlebars
@@ -3,23 +3,23 @@
 </div>
 {{#each blog as |blog|}}
   <div>
-      <h2>
-        <small>Title:</small> {{limit blog.title 40}}
-      </h2>
-      <p>
-        <small>Body:</small>
-        {{#if blog.body}}
-          {{blog.body}}
-        {{else}}
-          No body text.
-        {{/if}}
-      </p>
-      <p><small>id: </small>
-        {{#if blog._id}}{{blog._id}}
-        {{else}}
-          No id.
-        {{/if}}</p>
-      <p>
+    <h2>
+      <small>Title:</small> {{limit blog.title 40}}
+    </h2>
+    <p>
+      <small>Body:</small>
+      {{#if blog.body}}
+        {{blog.body}}
+      {{else}}
+        No body text.
+      {{/if}}
+    </p>
+    <p><small>id: </small>
+      {{#if blog._id}}
+        {{blog._id}}
+      {{else}}
+        No id.
+      {{/if}}</p>
   </div>
 
 {{/each}}
