add form maxlength, placeholders

--- a/assets/scripts/templates/blog-listing.handlebars
+++ b/assets/scripts/templates/blog-listing.handlebars
@@ -7,9 +7,9 @@
     <h2>Blog Owner: {{blog.owner}} </h2>
 
     <div class="owned" data-owner="{{blog.owner}}">
-      <form id="update-blog-{{blog._id}}" data-blog-id={{blog._id}} data-owner="{{blog.owner}}" class="blog-crud-form" data-action="update">
-        <textarea name="blog[title]" type="text" placeholder="text" required></textarea>
-        <textarea name="blog[body]" type="text" placeholder="text" required></textarea>
+      <form id="update-blog-{{blog._id}}" data-blog-id={{blog._id}} data-owner="{{blog.owner}}" class="blog-crud-form" data-action="update" >
+        <textarea name="blog[title]" type="text" placeholder="Enter a blog title" maxlength="40"required></textarea>
+        <textarea name="blog[body]" type="text" placeholder="Enter a blog body" maxlength="10000" required></textarea>
         <button type="submit">Update</button>
       </form>
       <form id="delete-blog-{{blog._id}}" data-blog-id={{blog._id}} data-owner="{{blog.owner}}" class="blog-crud-form" data-action="delete">
@@ -27,7 +27,7 @@
         <div class="owned" data-owner="{{comment.owner}}">
 
           <form id="update-comment-{{comment._id}}" data-comment-id={{comment._id}} class="comment-crud-form" data-action="update">
-            <textarea name="comment[text]" type="text" placeholder="text" required></textarea>
+            <textarea name="comment[text]" type="text" placeholder="Update your comment" maxlength="1000" required></textarea>
             <button type="submit">Update</button>
           </form>
           <form id="delete-comment-{{comment._id}}" data-comment-id={{comment._id}} class="comment-crud-form" data-action="delete">
@@ -42,7 +42,7 @@
     {{/each}}
 
     <form data-blog-id={{blog.id}} class="comment-crud-form post-login" data-action="create">
-      <textarea name="comment[text]" type="text" placeholder="text" required></textarea>
+      <textarea name="comment[text]" type="text" placeholder="Post your comment" maxlength="1000"required></textarea>
       <button type="submit">Create Comment</button>
     </form>
 
