--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -9,3 +9,13 @@ body {}
 .owned {
   display: none;
 }
+
+.blog {
+  overflow: hidden;
+  word-break: break-word;
+}
+
+.comment {
+  overflow: hidden;
+  word-break: break-word;
+}
