--- a/assets/scripts/templates/blog-listing.handlebars
+++ b/assets/scripts/templates/blog-listing.handlebars
@@ -1,6 +1,6 @@
 {{#each blogs as |blog|}}
 
-  <div id="blog-{{blog.id}}" data-blog-id={{blog.id}} data-owner="{{blog.owner}}" class="blog bg-dark text-light m-5 p-5 d-flex flex-column">
+  <div id="blog-{{blog.id}}" data-blog-id={{blog.id}} data-owner="{{blog.owner}}" class="blog bg-dark text-light m-5 p-5">
 
 
     <form id="delete-blog-{{blog._id}}" data-blog-id={{blog._id}} data-owner="{{blog.owner}}" class="blog-crud-form owned ml-auto" data-action="delete">
@@ -21,17 +21,25 @@
       </form>
     </div>
 
-    <button class="toggle-comments" data-blog-id={{blog._id}}>Show Comments</button>
+    <button class="toggle-comments" data-blog-id={{blog._id}} data-toggle="collapse" data-target=".comment[data-blog-id={{blog._id}}]">Show Comments</button>
+
+    <div id="comments-of-blog-{{blog.id}}" class="comment collapse" data-blog-id={{blog._id}}>
+
+      <form class="comment-crud-form post-login" data-blog-id={{blog.id}} data-action="create">
+        <textarea class="w-100" name="comment[text]" type="text" placeholder="Post your comment" maxlength="1000"required></textarea>
+        <button type="submit">Create Comment</button>
+      </form>
 
     {{#each blog.comments as |comment|}}
-      <div id="comment-{{comment._id}}" class="comment bg-success p-5 my-2 d-none" data-blog-id={{blog._id}} data-owner="{{comment.owner}}">
+
+      <div id="comment-{{comment._id}}" class="comment bg-success p-5 my-2" data-blog-id={{blog._id}} data-owner="{{comment.owner}}">
 
         <h4>{{comment.owner}} says</h4>
-        <h4>"{{comment.text}}"</h4>
+        <h4 id="comment-text-{{comment._id}}">{{comment.text}}</h4>
 
         <div class="owned" data-owner="{{comment.owner}}">
 
-          <form id="update-comment-{{comment._id}}" data-comment-id={{comment._id}} class="comment-crud-form" data-action="update">
+          <form id="update-comment-{{comment._id}}" data-comment-id={{comment._id}} class="comment-crud-form" data-action="update" data-blog-id={{blog._id}}>
             <textarea name="comment[text]" type="text" maxlength="1000" required>{{comment.text}}</textarea>
             <button type="submit">Update</button>
           </form>
@@ -42,14 +50,12 @@
         </div>
       </div>
 
-
-
     {{/each}}
 
-    <form data-blog-id={{blog.id}} class="comment-crud-form post-login" data-action="create">
-      <textarea name="comment[text]" type="text" placeholder="Post your comment" maxlength="1000"required></textarea>
-      <button type="submit">Create Comment</button>
-    </form>
+
+
+  </div>
+
 
   </div>
 
