--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -10,7 +10,13 @@ body {}
   display: none;
 }
 
-.blog,
+.blog {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  word-break: break-word;
+}
+
 .comment {
   overflow: hidden;
   word-break: break-word;
