--- a/assets/scripts/templates/comment-listing.handlebars
+++ b/assets/scripts/templates/comment-listing.handlebars
@@ -2,18 +2,20 @@
 
   <div id="comment-{{comment._id}}" class="comment bg-success p-5 my-2" data-blog-id={{blog}} data-owner="{{comment.owner}}">
 
+    <form id="delete-comment-{{comment._id}}" data-comment-id={{comment._id}} class="comment-crud-form ml-auto" data-action="delete">
+      <button class="bg-danger text-light" type="submit">Delete Comment</button>
+    </form>
+
     <h4>{{comment.owner}} says</h4>
-    <h4 id="comment-text-{{comment.id}}">"{{comment.text}}"</h4>
+    <h4 id="comment-text-{{comment._id}}">"{{comment.text}}"</h4>
 
     <div class="owned" data-owner="{{comment.owner}}">
 
       <form id="update-comment-{{comment._id}}" data-comment-id={{comment._id}} class="comment-crud-form" data-action="update">
-        <textarea name="comment[text]" type="text" maxlength="1000" required>{{comment.text}}</textarea>
+        <textarea id="comment-textarea-{{comment._id}}" class="w-100" name="comment[text]" type="text" maxlength="1000" required>{{comment.text}}</textarea>
         <button type="submit">Update</button>
       </form>
-      <form id="delete-comment-{{comment._id}}" data-comment-id={{comment._id}} class="comment-crud-form" data-action="delete">
-        <button class="bg-danger" type="submit">Delete Comment</button>
-      </form>
+
 
     </div>
   </div>
