--- a/assets/scripts/templates/comment-listing.handlebars
+++ b/assets/scripts/templates/comment-listing.handlebars
@@ -5,7 +5,7 @@
 
     <!-- COMMENT OWNER HANDLE -->
 
-    <p id="comment-handle-{{comment._id}}">commented:</p>
+    <p id="comment-handle-{{comment._id}}"> {{comment.handle}} commented:</p>
     <!-- COMMENT TEXT -->
     <p id="comment-text-{{comment._id}}">{{comment.text}}</p>
 
