fix  edit button showing up on create comment open edit blog

--- a/assets/scripts/templates/blog-listing.handlebars
+++ b/assets/scripts/templates/blog-listing.handlebars
@@ -34,8 +34,8 @@
             </form>
 
             <!-- DELETE BLOG BUTTON -->
-            <form id="delete-blog-{{blog._id}}" data-blog-id={{blog._id}} data-owner="{{blog.owner}}" class="blog-crud-form owned ml-auto" data-action="delete">
-              <button class="bg-danger text-light" type="submit">Delete Blog</button>
+            <form id="delete-blog-{{blog._id}}" data-blog-id={{blog._id}} data-owner="{{blog.owner}}" class="blog-crud-form owned d-flex" data-action="delete">
+              <button class="bg-danger text-light ml-auto" type="submit">Delete Blog</button>
             </form>
             <!-- UPDATE BLOG FORM TEXTAREA END -->
           </div>
