--- a/assets/scripts/templates/comment-listing.handlebars
+++ b/assets/scripts/templates/comment-listing.handlebars
@@ -7,7 +7,7 @@
 
     <p id="comment-handle-{{comment._id}}"> {{comment.handle}} commented:</p>
     <!-- COMMENT TEXT -->
-    <p id="comment-text-{{comment._id}}">{{comment.text}}</p>
+    <p id="comment-text-{{comment._id}}" class="text-justify">{{comment.text}}</p>
 
     <!-- UPDATE/DELETE COMMENT FORMS START -->
     <div class="owned" data-owner="{{comment.owner}}">
