--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,14 +1,21 @@
 @import '~bootstrap/scss/bootstrap';
 
-.owned {
-  display: none;
-}
-
 .blog {
   display: flex;
   flex-direction: column;
   overflow: hidden;
   word-break: break-word;
+}
+
+.clean-btn {
+  background: none;
+  border: none;
+  color: blue;
+  cursor: pointer;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .comment {
@@ -28,13 +35,14 @@
   justify-content: flex-end;
 }
 
-.clean-btn {
-  background: none;
-  border: none;
-  color: blue;
-  cursor: pointer;
+.owned {
+  display: none;
+}
 
-  &:hover {
-    text-decoration: underline;
-  }
+#user-message {
+  height: 38px;
+}
+
+#blog-body-textarea {
+  min-height: 10rem;
 }
